delete some useless docs

--- a/硬盘空间清理.md
+++ b/硬盘空间清理.md
@@ -1,6 +1,9 @@
 # Docker: 我们的硬盘空间去哪了？
 
-在我的[《系统学习Docker，践行DevOps理念》](http://coding.imooc.com/class/189.html)课程里，对于新手，我曾经说过，在玩docker的时候，尽量不要在自己电脑上(Mac或者windows)上直接安装docker和使用他，而是找一个虚拟机。Docker本身如果我们用的时间长了，会占用系统不少硬盘空间，特别是学习期间，今天拉一个image下来，明天又拉一个，今天建一个容器，明天建一个，久而久之，我们的电脑硬盘就吃紧了。如果是在虚拟机(vmware或者virtualbox),我们可以直接删除虚机，但是如果我们不想删除虚机，那如何清理docker所占的硬盘空间呢，本文我们一起来看看吧。
+对于新手，在玩docker的时候，尽量不要在自己电脑上(Mac或者windows)上直接安装docker和使用他，而是找一个虚拟机。
+Docker本身如果我们用的时间长了，会占用系统不少硬盘空间，特别是学习期间，今天拉一个image下来，明天又拉一个，今天建一个容器，明天建一个，
+久而久之，我们的电脑硬盘就吃紧了。如果是在虚拟机(vmware或者virtualbox)，我们可以直接删除虚机，但是如果我们不想删除虚机，
+那如何清理docker所占的硬盘空间呢，本文我们一起来看看吧。
 
 首先，我们先准备一台docker host，比如下面，我们通过df命令先看看系统当前的硬盘空间。
 ```
@@ -79,7 +82,8 @@ Local Volumes       0                   0                   0B                  
 Build Cache                                                 0B                  0B
 ```
 
-下面我们用Dockerfile基于alpine制作一个image，往这个image写入一个1G大小的文件，然后build完，我们看到系统空间多了1G，这个1G后面括号显示100%， 这个100%意思是，这个空间可以100%回收，怎么回收？把这个docker image删了就回收了。
+下面我们用Dockerfile基于alpine制作一个image，往这个image写入一个1G大小的文件，然后build完，我们看到系统空间多了1G，这个1G后面括号显示100%，
+这个100%意思是，这个空间可以100%回收，怎么回收？把这个docker image删了就回收了。
 ```
 [vagrant@localhost ~]$ more Dockerfile
 FROM alpine
